--- a/src/Pokemon/Pokemon.css
+++ b/src/Pokemon/Pokemon.css
@@ -1,3 +1,143 @@
-.pokFamale {
-    display: hidden;
+
+.ctn-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25vw;
+    height: 100%;
 }
+
+
+/* buscador */
+
+.ctn-search {
+    margin: 2rem auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25vw;
+    height: 100%;
+}
+
+.ctn-search input {
+    text-indent: 2px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    font-size: 15px;
+    color: #424949;
+    outline: none;
+    border-radius: 24px 0px 0px 24px;
+    border: 1px solid #dfe1e5;
+}
+
+.ctn-search input[type="text"] {
+    padding: 0.2rem 0.8rem;
+    font-size: 20px;
+}
+
+.ctn-search button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    font-size: 1.5rem;
+    color: #424949;
+    outline: none;
+    border-radius: 0px 66px 66px 0px;
+    border: 1px solid #dfe1e5;
+    border-left: none;
+    background-color: #dfe1e5;
+    color: #424949;
+}
+
+
+/*------------- tarjeta pokemon --------------*/
+
+.ctn-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa;
+    margin: 1rem auto;
+    box-sizing: border-box;
+}
+
+    
+.ctn-img-radiobutton {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 100%;
+    width: 18vw;
+    height: 100%;
+    font-size: 10px;
+    border-right: 4px solid whit;
+}
+
+.ctn-data-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 15vw;
+    height: 100%;
+    max-height: 100%;
+    background-color: #fafafa;
+    margin: 0 auto;
+}
+
+.ctn-name-id {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 2rem;
+    max-height: 100%;
+    background-color: #fafafa;
+    margin: 10px auto 0px;
+}
+
+.ctn-name-id p{
+    display: flex;
+    text-align: center;
+    max-height: 100%;
+    height: 100%;
+    
+}
+
+.ctn-name-id h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fafafa;
+    font-size: 25px;
+    margin: 0;
+    
+}
+
+.ctn-data-2-stat {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    height: 100%;
+    max-height: 100%;
+    font-size: 15px;
+}
+
+.ctn-stat {
+    width: 26vw;
+    max-width: 100%;
+    font-size: 14px;
+    margin: 1rem;
+}
+
