--- a/src/Pokemon/Pokemon.css
+++ b/src/Pokemon/Pokemon.css
@@ -1,11 +1,4 @@
 
-.ctn-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 25vw;
-    height: 100%;
-}
 
 
 /* buscador */
@@ -44,7 +37,6 @@
     width: 30%;
     height: 100%;
     border: none;
-    background-color: transparent;
     font-size: 1.5rem;
     color: #424949;
     outline: none;
@@ -58,29 +50,64 @@
 
 /*------------- tarjeta pokemon --------------*/
 
-.ctn-card {
+
+.ctn-main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
     background-color: #fafafa;
     margin: 1rem auto;
-    box-sizing: border-box;
+    border-radius: 0.5rem;
+    max-width: 40vw;
+    height: 200px;
 }
 
-    
+
+
 .ctn-img-radiobutton {
     display: flex;
     flex-direction: column;
     text-align: center;
     max-width: 100%;
-    width: 18vw;
+    width: 15vw;
     height: 100%;
     font-size: 10px;
-    border-right: 4px solid whit;
+    min-width: max-content;
 }
+
+.ctn-img {
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 100%;
+    height: 50%;
+    font-size: 10px;
+}
+
+.ctn.img img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-width: 100%;
+}
+
+.ctn-radioButton {
+    max-width: 100%;
+    width: 100%;
+    height: 20%;
+    font-size: 10px;
+    color: #424949;
+}
+
+
+
+.inputs-radio input{
+    margin: 4px;
+}
+
+/* nombre, id, tipo*/
 
 .ctn-data-1 {
     display: flex;
@@ -88,10 +115,10 @@
     align-items: center;
     justify-content: center;
     width: 15vw;
-    height: 100%;
+    height: 30%;
     max-height: 100%;
-    background-color: #fafafa;
     margin: 0 auto;
+    border-top: 4px solid white;
 }
 
 .ctn-name-id {
@@ -100,10 +127,12 @@
     justify-content: center;
     text-align: center;
     width: 100%;
-    height: 2rem;
+    height: 80%;
     max-height: 100%;
     background-color: #fafafa;
     margin: 10px auto 0px;
+    background-color: #424949;
+    color: white;
 }
 
 .ctn-name-id p{
@@ -121,23 +150,138 @@
     background-color: #fafafa;
     font-size: 25px;
     margin: 0;
+    background-color: #424949;
     
 }
 
-.ctn-data-2-stat {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 20vw;
-    height: 100%;
-    max-height: 100%;
-    font-size: 15px;
-}
+/*data 2*/
 
-.ctn-stat {
-    width: 26vw;
+.ctn-data-2 {
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    height: 100%;
     max-width: 100%;
     font-size: 14px;
-    margin: 1rem;
+    margin: 0;
 }
 
+.data-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    width: 100%;
+    height: 40%;
+    max-height: 100%;
+    border-bottom: 4px solid white;
+    border-left: 4px solid white;
+    padding: 4px 0px;
+}
+
+.ctn-data-2 p {
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    Padding: 0px 5px;
+    color: #424949;
+}
+
+.ctn-habilidades {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-width: 100%;
+    font-size: 14px;
+    border-left: 4px solid white;
+    margin: 0;
+}
+
+.ctn-habilidades label{
+    align-items: center;
+    display: flex;
+    max-width: 100%;
+    width: 100%;
+    height: 15%;
+    max-height: 100%;
+    background-color:#dfe1e5;
+    color: #424949;
+    padding: 0px 5px;
+}
+
+.ctn-habilidades p {
+    max-width: 100%;
+    width: 100%;
+    height: 85%;
+    max-height: 100%;
+    padding: 0px 5px;
+    color: #424949;
+    padding: 1rem 5px;
+}
+
+
+
+/* estadisticas */
+
+.ctn-stat {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+    height: 100%;
+    max-width: 100%;
+    font-size: 14px;
+    border-left: 4px solid white;
+    margin: 0;
+}
+
+.ctn-stat label {
+    align-items: center;
+    display: flex;
+    max-width: 100%;
+    width: 100%;
+    height: 15%;
+    max-height: 100%;
+    background-color:#dfe1e5;
+    color: #424949;
+    margin: 0;
+    padding: 0px 5px;
+}
+
+.ctn-estadisticas {
+    max-width: 100%;
+    width: 100%;
+    height: 85%;
+    background-color: #fafafa;
+    color: #424949;
+    font-size: 14.3px;
+    padding: 1rem 5px;
+}
+
+
+.mensaje-input-white {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    background-color: #fafafa;
+    border-radius: 0.5rem;
+    border: 1px solid #dfe1e5;
+    padding: 1rem;
+}
+
+.mensaje-response-null {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    background-color: #fafafa;
+    border-radius: 0.5rem;
+    border: 1px solid #dfe1e5;
+    padding: 1rem;
+}
