--- a/src/Combate/Combate.css
+++ b/src/Combate/Combate.css
@@ -56,6 +56,7 @@
     height: 30px;
     border-radius: 50%;
     float: right;
+    cursor: pointer;
 }
 
 .button-especial:disabled {
@@ -70,3 +71,16 @@
     color: #424949;
     cursor: not-allowed;
 }
+
+.ctn-win {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+    background-color: gold;
+}
+
+
+
